<resources>
    <string name="app_name">Nasa Volume Control</string>
    <string name="label_welcome_to_nasa_volume_control">Welcome To Nasa Volume Control</string>
    <string name="label_start_the_window_to_get_started">Start The Window To Get Started</string>
    <string name="label_start_floating_window">Start Floating Window</string>
    <string name="label_start_on_boot">Start On Boot</string>
    <string name="label_stop_floating_window">Stop Floating Window</string>
    <string name="label_please_grant_the_permission_to_draw_over_other_apps">Please grant the permission to draw over other apps</string>
    <string name="label_advanced_controls">Advanced controls</string>
    <string name="label_media">Media</string>
    <string name="label_call">Call</string>
    <string name="label_ringtone">Ringtone</string>
    <string name="label_notification">Notification</string>
    <string name="label_alarm">Alarm</string>
    <string name="label_volume">Volume: %1$d%%</string>
    <string name="label_volume_control_service">Volume Control Service</string>
    <string name="label_running_in_background">Running in background</string>
    <string name="label_package">package:%1$s</string>
    <string name="label_grant_dnd_access_please">Grant DND Access Please</string>
    <string name="label_window_opacity">Window Opacity</string>
    <string name="label_min_progress_is">Min Progress is %d%%</string>
</resources>