<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/window_bg"
    android:orientation="vertical"
    android:padding="18dp">

    <ImageView
        android:id="@+id/minMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:src="@drawable/minimize_24px" />

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/muteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:src="@drawable/volume_off_24px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="8dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/label_media"
                android:textSize="16sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/pgMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/label_call"
                android:textSize="16sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/pgCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/label_ringtone"
                android:textSize="16sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/pgRingtone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/label_notification"
                android:textSize="16sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/pgNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/label_alarm"
                android:textSize="16sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/pgAlarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
